--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-data-filter></app-data-filter>
-<app-data-list [items]="items"></app-data-list>
+<app-data-list [items]="items$ | async"></app-data-list>
