--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-data-filter></app-data-filter>
-<app-data-list [items]="items$ | async"></app-data-list>
+<infinite-scroll (scrolled)="loadMore()">
+  <app-data-list [items]="items$ | async"></app-data-list>
+</infinite-scroll>
