--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-data-filter></app-data-filter>
+<app-data-filter
+  [data]="filter$ | async"
+  (onChange)="filter$.next($event)"
+></app-data-filter>
 <infinite-scroll (scrolled)="loadMore()">
   <app-data-list [items]="items$ | async"></app-data-list>
 </infinite-scroll>
